--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-import-export==0.4.1
 django-lazysignup==1.0.2
 django-modeltranslation==0.10.2
 entrypoints==0.2
+enum34==1.1.6
 ipykernel==4.3.1
 ipython==4.1.2
 ipython-genutils==0.1.0
